# pikav

./: .dockerignore  .gitignore  .releaserc.yml  Cargo.toml  Dockerfile  Makefile  README.md  config.yml  deny.toml  docker-compose.standalone.yml  docker-compose.yml  eu-west-1a.yml  go.mod  go.sum  main.go  package.json  pnpm-lock.yaml
.docker/kratos/email-password/: kratos.yml
.docker/oathkeeper/: access-rules.yml
.docker/ory/kratos/email-password/: kratos.yml
.docker/ory/oathkeeper/: access-rules.yml
.docker/pikav/: eu-west-1a.yml  eu-west-1b.yml  eu-west-1c.yml  us-west-1a.yml
.docker/pulsar/: client.conf  init-data.sh
.github/: renovate.json
.github/workflows/: audit.yml  ci.yml  pr.yml  publish.yml  release.yml  testing.yml  weekly.yml
api/: Cargo.toml
api/src/: error.rs  extractor.rs  jwks.rs  lib.rs
auth/: auth.go
cli/: Cargo.toml
cli/src/: main.rs  serve.rs
client/: Cargo.toml  README.md
client/src/: lib.rs
cluster/: Cargo.toml
cluster/proto/timada/: pikav.proto
cluster/src/: lib.rs
cmd/: Cargo.toml  root.go  serve.go
cmd/cli/: main.go
cmd/migrate/: root.go
cmd/pikav/: main.go
cmd/serve/: root.go
cmd/src/: main.rs  publish.rs  serve.rs
cmd/todo/: main.go
config/: config.go  eu-west-1b.yml  eu-west-1c.yml  us-west-1a.yml
configs/: config.yml  eu-west-1a.yml  eu-west-1b.yml  eu-west-1c.yml  pikav.yml  standalone.yml  us-west-1a.yml
example/: .env  Cargo.toml  README.md  app.go  db.sql  main.go  model.go
example/src/: app.rs  main.rs  sqlite.rs
examples/leptos/: Cargo.toml
examples/leptos/migrations/: 20220615223504_todos.sql
examples/leptos/src/: app.rs  main.rs
internal/api/: app.go  auth.go  client.go  event.go  sender.go  server.go
internal/app/pikav/: app.go  auth.go  client.go  config.go  event.go  sender.go
internal/app/todo/: app.go  model.go
internal/core/: auth.go  config.go  event_bus.go  topic.go  topic_test.go
internal/pkg/core/: config.go
internal/sse/: event.go  server.go  session.go
pikav/: Cargo.toml
pikav-client/: Cargo.toml  README.md  build.rs
pikav-client/proto/timada/: pikav.proto
pikav-client/src/: error.rs  lib.rs
pikav-web/: Cargo.toml  README.md
pikav-web/src/: client.rs  leptos.rs  lib.rs
pikav-web/src/client/: hydrate.rs  mod.rs  ssr.rs
pikav-web/src/leptos/: hydrate.rs  mod.rs
pikav-web/src/leptos_s/: ssr.rs
pikav/src/: event.rs  lib.rs  publisher.rs  server.rs
pikav/src/topic/: filter.rs  mod.rs  name.rs
pkg/client/: client.go
pkg/topic/: filter.go  filter_test.go  name.go  name_test.go
src/: main.rs
sse/: server.go  session.go
topic/: filter.go  filter_test.go  name.go  name_test.go
