[package]
name = "pikav-api"
version = "0.20.10"
edition = "2021"
license = "Apache-2.0"

[dependencies]
pikav = { path = "../pikav", version = "0.20.10" }
pikav-client = { path = "../pikav-client", version = "0.20.10" }
actix-web = "4.4.1"
actix-cors = "0.7.0"
serde = "1.0.195"
serde_json = "1.0.111"
futures-core = "0.3.30"
futures-util = "0.3.30"
thiserror = "1.0.56"
tracing = "0.1.40"
twa-jwks = { version = "1.2.11", features = ["actix-web"] }
