[package]
name = "pikav-cli"
version ="0.9.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pikav-api = { path = "../api" ,version ="0.9.1"}

config = "0.13.1"
serde = "1.0.81"
serde_json = "1.0.81"
clap = "3.1.18"
actix-rt = "2.7.0"
