[package]
name = "pikav-client"
version ="0.9.3"
edition = "2021"
license = "Apache-2.0"
description = "A client that help you publish to pikav server"
repository = "https://github.com/timada-org/pikav"
homepage = "https://pikav.timada.co"
documentation = "https://docs.rs/pikav-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = "3.0.0"
serde = { version = "1.0.81", features = ["derive"] }
serde_json = "1.0.81"
parking_lot = "0.12.1"
actix-rt = "2.7.0"
tracing = "0.1.35"
