[package]
name = "pikav-cluster"
version = "0.20.10"
edition = "2021"
license = "Apache-2.0"

[dependencies]
pikav = { path = "../pikav", features = ["publisher"], version = "0.20.10" }
pikav-client = { path = "../pikav-client", version = "0.20.10" }
tonic = { version = "0.10.2", features = ["tls"] }
bytes = "1.5.0"
serde_json = "1.0.111"
