[package]
name = "pikav-cluster"
version = "0.20.11"
edition = "2021"
license = "Apache-2.0"

[dependencies]
pikav = { path = "../pikav", features = ["publisher"], version = "0.20.11" }
pikav-client = { path = "../pikav-client", version = "0.20.11" }
tonic = { version = "0.11.0", features = ["tls"] }
bytes = "1.5.0"
serde_json = "1.0.113"
