[package]
name = "cmd"
version = "0.20.10"
edition = "2021"
license = "Apache-2.0"

[dependencies]
pikav-api = { path = "../api", version = "0.20.10" }
pikav-cluster = { path = "../cluster", version = "0.20.10" }
pikav-client = { path = "../pikav-client", version = "0.20.10" }
config = "0.13.4"
serde = "1.0.195"
serde_json = "1.0.111"
clap = "4.4.18"
actix-rt = "2.9.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
