[package]
name = "cmd"
version = "0.20.11"
edition = "2021"
license = "Apache-2.0"

[dependencies]
pikav-api = { path = "../api", version = "0.20.11" }
pikav-cluster = { path = "../cluster", version = "0.20.11" }
pikav-client = { path = "../pikav-client", version = "0.20.11" }
config = "0.14.0"
serde = "1.0.196"
serde_json = "1.0.113"
clap = "4.5.0"
actix-rt = "2.9.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
