[package]
name = "example"
version = "0.16.0"
edition = "2021"
publish = false

[dependencies]
pikav-client = { path = "../pikav-client", version = "0.16.0" }
actix-web = "4.3.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = [ "runtime-actix-rustls", "sqlite" ] }
rand = "0.8.5"
futures = "0.3.28"
actix-jwks = "0.2.1"
