[package]
name = "example"
version = "0.17.4"
edition = "2021"
publish = false

[package.metadata.leptos]
output-name = "example"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "assets"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pikav-web = { path = "../pikav-web", version = "0.17.4", features = ["leptos"] }
pikav-client = { path = "../pikav-client", version = "0.17.4", optional = true }
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4.3", optional = true, features = ["macros"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
cfg-if = "1.0"
leptos = { version = "0.4", features = ["serde"] }
leptos_meta = { version = "0.4" }
leptos_actix = { version = "0.4", optional = true }
leptos_router = { version = "0.4" }
log = "0.4"
simple_logger = "4.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlDocument"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sqlx = { version = "0.6", optional = true, features = [ "runtime-actix-rustls", "sqlite" ] }
rand = { version = "0.8", optional = true }
futures = { version = "0.3", optional = true }
reqwest = { version = "0.11", features = ["json"] }

[features]
default = []
hydrate = [
	"leptos/hydrate",
	"leptos_meta/hydrate",
	"leptos_router/hydrate",
	"pikav-web/leptos-hydrate",
]
ssr = [
	"dep:actix-files",
	"dep:actix-web",
	"dep:leptos_actix",
	"dep:sqlx",
	"dep:rand",
	"dep:futures",
	"dep:pikav-client",
	"leptos/ssr",
	"leptos_meta/ssr",
	"leptos_router/ssr",
]
