[package]
name = "pikav-client"
version = "0.20.3"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "A client that help you publish to pikav server"
repository = "https://github.com/timayz/pikav"
homepage = "https://pikav.timada.co"
documentation = "https://docs.rs/pikav-client"

[package.metadata.cargo-machete]
ignored = ["prost"]

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
parking_lot = "0.12.1"
tokio = "1.34.0"
tracing = "0.1.40"
thiserror = "1.0.50"
tonic = { version = "0.10.2", features = ["tls"] }
prost = "0.12.1"
url = "2.4.1"

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }
