[package]
name = "pikav-client"
version = "0.20.8"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "A client that help you publish to pikav server"
repository = "https://github.com/timayz/pikav"
homepage = "https://pikav.timada.co"
documentation = "https://docs.rs/pikav-client"

[package.metadata.cargo-machete]
ignored = ["prost"]

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
parking_lot = "0.12.1"
tokio = "1.35.1"
tracing = "0.1.40"
thiserror = "1.0.56"
tonic = { version = "0.10.2", features = ["tls"] }
prost = "0.12.3"
url = "2.5.0"

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }
