[package]
name = "pikav-web"
version = "0.17.4"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "A client that help you publish to pikav server"
repository = "https://github.com/timada-org/pikav"
homepage = "https://pikav.timada.co"
documentation = "https://docs.rs/pikav-client"

[dependencies]
pikav = { path = "../pikav", features = ["event"], version = "0.17.4" }
anyhow = "1.0"
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
wasm-bindgen-futures = { version = "0.4", optional = true }
log = { version = "0.4", optional = true }
cfg-if = "1.0"
leptos = { version = "0.4", features = ["serde"], optional = true }

[features]
default = []
hydrate = ["dep:wasm-bindgen-futures", "dep:log"]
leptos = ["dep:leptos"]
leptos-hydrate = ["dep:leptos", "hydrate"]
