[package]
name = "pikav-web"
version = "0.17.8"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "A client that help you publish to pikav server"
repository = "https://github.com/timayz/pikav"
homepage = "https://pikav.timada.co"
documentation = "https://docs.rs/pikav-client"

[dependencies]
pikav = { path = "../pikav", features = ["event"], version = "0.17.8" }
anyhow = "1.0.75"
gloo-net = "0.4.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
futures = "0.3.28"
wasm-bindgen-futures = { version = "0.4.37", optional = true }
log = { version = "0.4.20", optional = true }
cfg-if = "1.0.0"
leptos = { version = "0.5.0-beta", features = ["serde"], optional = true }

[features]
default = []
hydrate = ["dep:wasm-bindgen-futures", "dep:log"]
leptos = ["dep:leptos"]
leptos-hydrate = ["dep:leptos", "hydrate"]
