[package]
name = "pikav-web"
version = "0.20.6"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "A client that help you publish to pikav server"
repository = "https://github.com/timayz/pikav"
homepage = "https://pikav.timada.co"
documentation = "https://docs.rs/pikav-client"

[dependencies]
pikav = { path = "../pikav", features = ["event"], version = "0.20.6" }
anyhow = "1.0.76"
gloo-net = "0.5.0"
serde_json = "1.0.108"
futures = "0.3.30"
wasm-bindgen-futures = { version = "0.4.39", optional = true }
log = { version = "0.4.20", optional = true }
cfg-if = "1.0.0"
leptos = { version = "0.5.4", features = ["serde"], optional = true }

[features]
default = []
hydrate = ["dep:wasm-bindgen-futures", "dep:log"]
leptos = ["dep:leptos"]
leptos-hydrate = ["dep:leptos", "hydrate"]
