[package]
name = "pikav"
version = "0.20.6"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "A library that help you send event to client with topic subscription"
repository = "https://github.com/timayz/pikav"
homepage = "https://pikav.timada.co"
documentation = "https://docs.rs/pikav"

[dependencies]
tokio = { version = "1.35.0", features = ["full"], optional = true }
nanoid = { version = "0.4.0", optional = true }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", optional = true }
futures = { version = "0.3.29", optional = true }
glob-match = "0.2.1"

[features]
event = []
publisher = [
	"dep:nanoid",
	"dep:tokio",
	"dep:serde_json",
	"dep:futures",
	"event",
]
