[package]
name = "leptos-example"
version = "0.19.0"
edition = "2021"
license = "Apache-2.0"

[package.metadata.leptos]
output-name = "example"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "assets"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pikav-web = { path = "../../pikav-web", version = "0.19.0", features = ["leptos"] }
pikav-client = { path = "../../pikav-client", version = "0.19.0", optional = true }
actix-files = { version = "0.6.2", optional = true }
actix-web = { version = "4.4.0", optional = true, features = ["macros"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
cfg-if = "1.0.0"
leptos = { version = "0.5.0-rc2", features = ["serde"] }
leptos_meta = { version = "0.5.0-rc2" }
leptos_actix = { version = "0.5.0-rc2", optional = true }
leptos_router = { version = "0.5.0-rc2" }
log = "0.4.20"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["HtmlDocument"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107" }
sqlx = { version = "0.7.1", optional = true, features = [ "runtime-tokio", "sqlite" ] }
rand = { version = "0.8.5", optional = true }
futures = { version = "0.3.28", optional = true }
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls", "json"] }

[features]
default = []
hydrate = [
	"leptos/hydrate",
	"leptos_meta/hydrate",
	"leptos_router/hydrate",
	"pikav-web/leptos-hydrate",
]
ssr = [
	"dep:actix-files",
	"dep:actix-web",
	"dep:leptos_actix",
	"dep:sqlx",
	"dep:rand",
	"dep:futures",
	"dep:pikav-client",
	"leptos/ssr",
	"leptos_meta/ssr",
	"leptos_router/ssr",
]
